--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
      <title>My Website</title>
    </head>
    <body>
+    <script src="init.js"></script>
      <h1>Hello World</h1>
    </body>
  </html>
